--- a/index.html
+++ b/index.html
@@ -20,26 +20,39 @@
         <!-- parte sx della web app con comandi -->
         <div class="nav_box w40 flex">
 
-            <div class="user_box">
-                <div class="user_control h_60">
-                    <i class="fas fa-circle-notch"></i>
-                    <i class="fas fa-comment-alt"></i>
-                    <i class="fas fa-ellipsis-v"></i>
-                </div>
+
+            <div class="user_box h_70 light_grey_back flex center_flex">
+
+                    <div class="user flex center_flex left_margin_10"> <img class="logo small" :src="imgPrefix + user.avatar + imgExt" alt="user logo"> <span class="left_margin_10">{{user.name}}</span> </div>
+                    <span class="grey_col">
+                        <i class="fas fa-circle-notch double"></i>
+                        <i class="fas fa-comment-alt double"></i>
+                        <i class="fas fa-ellipsis-v double"></i>
+                    </span>
+
             </div>
 
-            <div class="notifications h_60">
-                <i class="fas fa-bell-slash double circle white_back"></i>
+            <div class="notifications h_80 flex pad_10 center_flex">
+                <span class="bell flex center_flex white_back left_margin_10">
+                    <i class="fas fa-bell-slash double"></i>
+                </span>
+                <span class="left_margin_10">
+                    <p>Ricevi notifiche di nuovi messaggi</p>
+                    <p class="grey_col under">Attiva notifiche desktop</p>
+                </span>
             </div>
 
-            <div class="search h_40 ">
-                <label class="w40" for="chat_search"><i class="fas fa-search"></i></label>
-                <input class="w60" type="text" id="chat_search" placeholder="Cerca o inizia una nuova chat">
+            <div class="search h_60 flex center_flex">
+                <span class="white_back search_label" for="chat_search"><i class="fas fa-search"></i></span>
+                <input class="w80" type="text" id="chat_search" placeholder="Cerca o inizia una nuova chat"/>
             </div>
 
             <div class="chat_list white_back">
                 <ul>
-                    <li v-for="(contact, index) in contacts"><img :src="imgPrefix + contact.avatar + imgExt"  alt=""></li>
+                    <li class="pad_10 flex" v-for="(contact, index) in contacts">
+                        <img class="logo big left_margin_10" :src="imgPrefix + contact.avatar + imgExt"  alt="contact.name logo"/>
+                        <span class="left_margin_10">{{contact.name}}</span>
+                    </li>
                 </ul>
 
             </div>
@@ -48,21 +61,36 @@
         <!-- parte dx della web app con visualizzazione chat -->
         <div class="chat_box flex">
 
-            <div class="contact flex h_60 light_grey_back">
-
+            <div class="contact flex h_70 center_flex light_grey_back pad_10">
+                <img class="logo small" :src="imgPrefix + contacts[0].avatar + imgExt" alt="contact logo"/>
+                <span class="left_margin_10 flex_expand">
+                    <p>{{contacts[0].name}}</p>
+                    <p class="grey_col">Ultimo accesso oggi alle</p>
+                </span>
+                <span class="grey_col right ">
+                    <i class="fas fa-search double"></i>
+                    <i class="fas fa-paperclip double"></i>
+                    <i class="fas fa-ellipsis-v double"></i>
+                </span>
             </div>
 
             <div class="chat flex">
-
+                <ul class="chat_messages">
+                    <li class="msg" :class="message.status" v-for="(message, index) in contacts[0].messages">{{message.text}}
+                        <span class="msg_date">{{message.date}}</span>
+                    </li>
+                </ul>
             </div>
 
-            <div class="message_box flex sand_back h_60">
-                
+            <div class="message_box flex sand_back h_70 grey_col">
+                <i class="far fa-smile double"></i>
+                <input class="w80 message_in" type="text" placeholder="Scrivi un messaggio"/>
+                <i class="fas fa-microphone double"></i>
             </div>
         </div>
 
 
     </div>
-    <!-- <script src="js/main.js"></script> -->
+    <script src="js/main.js"></script>
 </body>
 </html>
