--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
         <!-- parte sx della web app con comandi -->
         <div class="nav_box w40 flex">
 
-
+            <!-- sezione profilo utente -->
             <div class="user_box h_70 light_grey_back flex center_flex">
-
-                    <div class="user flex center_flex left_margin_10"> <img class="logo small" :src="imgPrefix + user.avatar + imgExt" alt="user logo"> <span class="left_margin_10">{{user.name}}</span> </div>
+                    <div class="user flex center_flex left_margin_10"> 
+                        <img class="logo small" :src="imgPrefix + user.avatar + imgExt" alt="user logo"/> 
+                        <span class="left_margin_10">{{user.name}}</span> 
+                    </div>
                     <span class="grey_col">
                         <i class="fas fa-circle-notch double"></i>
                         <i class="fas fa-comment-alt double"></i>
                         <i class="fas fa-ellipsis-v double"></i>
                     </span>
-
             </div>
 
+            <!-- sezione attiva/disattiva notifiche -->
             <div class="notifications h_80 flex pad_10 center_flex">
                 <span class="bell flex center_flex white_back left_margin_10">
                     <i class="fas fa-bell-slash double"></i>
@@ -42,14 +44,16 @@
                 </span>
             </div>
 
+            <!-- sezione ricerca chat -->
             <div class="search h_60 flex center_flex">
                 <span class="white_back search_label" for="chat_search"><i class="fas fa-search"></i></span>
                 <input class="w80" type="text" id="chat_search" placeholder="Cerca o inizia una nuova chat"/>
             </div>
 
+            <!-- sezione lista chat -->
             <div class="chat_list white_back">
                 <ul>
-                    <li class="pad_10 flex" v-for="(contact, index) in contacts">
+                    <li class="pad_10 flex" v-for="(contact, index) in contacts" :class="(index == 0) ? 'selected' : null">
                         <img class="logo big left_margin_10" :src="imgPrefix + contact.avatar + imgExt"  alt="contact.name logo"/>
                         <span class="left_margin_10">{{contact.name}}</span>
                     </li>
@@ -61,6 +65,7 @@
         <!-- parte dx della web app con visualizzazione chat -->
         <div class="chat_box flex">
 
+            <!-- barra in alto con informazioni chat visualizzata -->
             <div class="contact flex h_70 center_flex light_grey_back pad_10">
                 <img class="logo small" :src="imgPrefix + contacts[0].avatar + imgExt" alt="contact logo"/>
                 <span class="left_margin_10 flex_expand">
@@ -74,6 +79,7 @@
                 </span>
             </div>
 
+            <!-- visualizzazione messaggi della chat selezionata -->
             <div class="chat flex">
                 <ul class="chat_messages">
                     <li class="msg" :class="message.status" v-for="(message, index) in contacts[0].messages">{{message.text}}
@@ -82,6 +88,7 @@
                 </ul>
             </div>
 
+            <!-- barra in basso con input messaggio -->
             <div class="message_box flex sand_back h_70 grey_col">
                 <i class="far fa-smile double"></i>
                 <input class="w80 message_in" type="text" placeholder="Scrivi un messaggio"/>
