--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <!-- sezione ricerca chat -->
             <div class="search h_60 flex center_flex">
                 <label class="white_back search_label" for="chat_search"><i class="fas fa-search"></i></label>
-                <input class="w80" type="text" id="chat_search" v-model="txt" placeholder="Cerca o inizia una nuova chat" @keyup.enter="chatFilter(txt)"/>
+                <input class="w80" type="text" id="chat_search" v-model="txt" placeholder="Cerca o inizia una nuova chat" @keyup="chatFilter(txt)"/>
             </div>
 
             <!-- sezione lista chat -->
             <div class="chat_list white_back">
                 <ul>
-                    <li class="contact_item pad_10 flex" v-for="(contact, index) in contacts" :class="(index == chatIndex) ? 'selected' : null" @click="chatSelected(index)">
+                    <li class="contact_item pad_10" v-for="(contact, index) in contacts" :class="(contact.visible == false) ? 'hide' : (index === chatIndex) ? 'selected' : null" @click="chatSelected(index)">
                         <img class="logo big left_margin_10" :src="imgPrefix + contact.avatar + imgExt"  alt="contact.name logo"/>
                         <span class="left_margin_10">{{contact.name}}</span>
                     </li>
@@ -66,11 +66,12 @@
         <div class="chat_box flex">
 
             <!-- barra in alto con informazioni chat visualizzata -->
-            <div class="contact flex h_70 center_flex light_grey_back pad_10">
+            <div v-if="chatIndex === ''" class="contact flex h_70 center_flex light_grey_back pad_10"></div>
+            <div v-else class="contact flex h_70 center_flex light_grey_back pad_10">
                 <img class="logo small" :src="imgPrefix + contacts[chatIndex].avatar + imgExt" alt="contact logo"/>
                 <span class="left_margin_10 flex_expand">
                     <p>{{contacts[chatIndex].name}}</p>
-                    <p class="grey_col">Ultimo accesso oggi alle <!-- {{contacts[chatIndex].messages[contacts[chatIndex].messages.length - 1].date} -->}</p>
+                    <p class="grey_col">{{temporaryLast + getLastDate(contacts[chatIndex].messages)}} <!-- {{contacts[chatIndex].messages[contacts[chatIndex].messages.length - 1].date} --></p>
                 </span>
                 <span class="grey_col right ">
                     <i class="fas fa-search double"></i>
@@ -80,7 +81,8 @@
             </div>
 
             <!-- visualizzazione messaggi della chat selezionata -->
-            <div class="chat flex">
+            <div v-if="chatIndex === ''" class="chat flex"></div>
+            <div v-else class="chat flex">
                 <ul class="chat_messages">
                     <li class="msg" :class="message.status" v-for="(message, index) in contacts[chatIndex].messages">{{message.text}}
                         <span class="msg_date">{{message.date}}</span>
